--- a/client/package.json
+++ b/client/package.json
@@ -14,8 +14,10 @@
     "framer-motion": "^11.5.3",
     "lucide-react": "^0.438.0",
     "react": "^18.3.1",
+    "react-beautiful-dnd": "^13.1.1",
     "react-cookie": "^7.2.0",
     "react-dom": "^18.3.1",
+    "react-dropzone": "^14.2.3",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.1",
     "react-toastify": "^10.0.5"
