--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,8 @@
     "http": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.1",
+    "multer": "^1.4.5-lts.1",
+    "path": "^0.12.7",
     "uuid": "^10.0.0"
   }
 }
